--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,300&display=swap');
+
+:root {
+  --primary-white: #fff;
+  --primary-dark: rgba(255,255,255, 0);
+  --secondary-green: #8cb33f;
+}
+
+body {
+  font-family: "Roboto Condesed" sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +47,46 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+
+/***************** NAVBAR ******************************/
+.navbar {
+  background-color:#343a42;
+}
+
+.logo{
+  width: 7rem;
+}
+
+/** MENU LINKS **/
+nav a.nav-link {
+  font-size: .8rem;
+  letter-spacing: 0.0375rem;
+  cursor: pointer;
+}
+
+nav ul li {
+  text-transform: uppercase;
+}
+
+.navbar-nav > li > a {
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
+  color: var(--primary-white) !important;
+  border-bottom: 0.1875rem solid var(--primary-dark);
+}
+
+.navbar-brand {
+  max-width: 17.25rem;
+  padding: 0 !important;
+  height: 6rem !important;
+}
+
+.navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
+  border-bottom: 0.1875rem solid var(--secondary-green);
+}
+.navbar-nav > li > a:hover {
+  border-bottom: 0.1875rem solid var(--secondary-green);
 }
