--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,10 @@
 :root {
   --primary-white: #fff;
   --primary-dark: rgba(255,255,255, 0);
-  --secondary-green: #8cb33f;
+  --primary-red: #ef4035;
+  --primary-red-hover: #f33501;
+  --primary-green: #35E844;
+  --secondary-green: #84b43c;
 }
 
 body {
@@ -52,10 +55,12 @@ body {
 
 
 /***************** NAVBAR ******************************/
-.navbar {
-  background-color:#343a42;
+/*.navbar {
+  background-color: #303227;
+}*/
+nav{
+  z-index: 2;
 }
-
 .logo{
   width: 7rem;
 }
@@ -89,4 +94,91 @@ nav ul li {
 }
 .navbar-nav > li > a:hover {
   border-bottom: 0.1875rem solid var(--secondary-green);
+}
+
+/******************* HEADER *********************/
+.header-wraper {
+  position: relative;
+  background: url(background.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: "Roboto Condesed" sans-serif;
+  z-index: 1;
+}
+
+.main-info h1 {
+  color: var(--secondary-green);
+  text-transform: uppercase;
+}
+
+/***** TYPED TEST *************/
+.typed-text {
+  font-size: 2rem;
+  color: var(--primary-white);
+}
+
+/******** Header main offer button *************/
+.btn-main-offer {
+  border: 1px solid var(--primary-green); 
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
+  color: var(--primary-white);
+  margin: 2rem;
+}
+
+.btn-main-offer:hover {
+  text-decoration: none;
+  background-color: var(--secondary-green);
+  color: var(--primary-white);
+  transition: .2s ease-in-out;
+}
+
+/**** PARTICLES JS ********************/
+
+.tsparticles-canvas-el {
+  position: absolute;
+  height: 100vh;
+  width: 100vh;
+  z-index: 1;
+}
+
+@media (max-width: 768px) {
+  .particles-canvas {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-info h1 {
+    font-size: 1.5rem !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-info h1 {
+    font-size: 1.7rem !important;
+  }
+  .typed-text {
+    font-size: 1.3rem !important;
+  }
+}
+@media (max-width: 768px) {
+  .navbar-brand {
+    width: 7rem;
+  }
 }
